--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -735,6 +735,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-kubernetes-client-internal</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-kogito</artifactId>
                 <version>${project.version}</version>
             </dependency>
