--- a/extensions/kubernetes-client/pom.xml
+++ b/extensions/kubernetes-client/pom.xml
@@ -16,6 +16,8 @@
     <modules>
         <module>deployment</module>
         <module>runtime</module>
+        <module>deployment-internal</module>
+        <module>runtime-internal</module>
         <module>spi</module>
     </modules>
 </project>
