Implement the RestEasy Mutiny support
It allows returning Uni and Multi in RestEasy endpoint
It also allows using Uni in the Rest Client
There is no `providers` file to avoid registering provider twice - only the processor should do it.

--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -568,7 +568,18 @@
                 <artifactId>quarkus-scala-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
-            
+
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-mutiny-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-resteasy-mutiny-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-qute-deployment</artifactId>
