--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -48,6 +48,7 @@
         <module>resteasy-jsonb</module>
         <module>resteasy-jackson</module>
         <module>resteasy-jaxb</module>
+        <module>resteasy-mutiny</module>
         <module>resteasy-qute</module>
         <module>rest-client</module>
         <module>smallrye-openapi-common</module>
