Implement RestEasy Mutiny integration tests
It covers:
* Method returning Uni
* Method returning Multi (chunked and SSE)
* Rest client returning Uni

--- a/ci-templates/stages.yml
+++ b/ci-templates/stages.yml
@@ -368,9 +368,10 @@ stages:
         parameters:
           poolSettings: ${{parameters.poolSettings}}
           expectUseVMs: ${{parameters.expectUseVMs}}
-          timeoutInMinutes: 35
+          timeoutInMinutes: 55
           modules:
             - resteasy-jackson
+            - resteasy-mutiny
             - vertx
             - vertx-http
             - vertx-graphql
