--- a/integration-tests/kubernetes/src/it/kubernetes-build-and-deploy/pom.xml
+++ b/integration-tests/kubernetes/src/it/kubernetes-build-and-deploy/pom.xml
@@ -34,6 +34,10 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-container-image-docker</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
     </dependency>
