--- a/integration-tests/main/src/main/resources/application.properties
+++ b/integration-tests/main/src/main/resources/application.properties
@@ -3,6 +3,7 @@ io.quarkus.it.rest.RestInterface/mp-rest/scope=javax.inject.Singleton
 io.quarkus.it.rest.RestClientInterface/mp-rest/url=${test.url}
 restClientConfigKey/mp-rest/url=${test.url}
 restClientBaseUriConfigKey/mp-rest/url=${test.url}
+loopback/mp-rest/url=${test.url}/loopback
 
 org.eclipse.microprofile.rest.client.propagateHeaders=header-name
 # Disabled by default as it establishes external connections.
