#6549 - Apache Tika can not parse Microsoft Docx format in native mode

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -182,6 +182,9 @@
         <jzlib.version>1.1.1</jzlib.version>
         <checker-qual.version>2.5.2</checker-qual.version>
         <error-prone-annotations.version>2.2.0</error-prone-annotations.version>
+        <reflections.version>0.9.12</reflections.version>
+        <ooxml-schemas.version>1.4</ooxml-schemas.version>
+        <xmlbeans.version>3.0.2</xmlbeans.version>
     </properties>
 
     <dependencyManagement>
@@ -1125,6 +1128,10 @@
                     <exclusion>
                         <groupId>org.apache.cxf</groupId>
                         <artifactId>cxf-rt-rs-client</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.apache.poi</groupId>
+                        <artifactId>poi-ooxml-schemas</artifactId>
                     </exclusion>
                 </exclusions>
                 <version>${tika.version}</version>
@@ -2616,6 +2623,12 @@
                 <groupId>org.kie.kogito</groupId>
                 <artifactId>drools-decisiontables</artifactId>
                 <version>${kogito.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.poi</groupId>
+                        <artifactId>poi-ooxml</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.kie.kogito</groupId>
@@ -2762,6 +2775,32 @@
                 <artifactId>quarkus-banner</artifactId>
                 <version>${project.version}</version>
             </dependency>
+
+            <!-- reflections -->
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>${reflections.version}</version>
+            </dependency>
+
+            <!-- ooxml -->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>ooxml-schemas</artifactId>
+                <version>${ooxml-schemas.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.apache.xmlbeans</groupId>
+                        <artifactId>xmlbeans</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.xmlbeans</groupId>
+                <artifactId>xmlbeans</artifactId>
+                <version>${xmlbeans.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
