--- a/integration-tests/tika/src/main/resources/application.properties
+++ b/integration-tests/tika/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-quarkus.tika.parsers=pdf
+quarkus.tika.parsers=pdf,ooxml
 quarkus.tika.parser-options.pdf.sort-by-position=true
+quarkus.tika.parser-file-format-support.ooxml.docx=true
+quarkus.tika.parser-file-format-support.ooxml.pptx=false
+quarkus.tika.parser-file-format-support.ooxml.xlsx=false
