test: split k8s deploy test to docker and jib.

--- a/integration-tests/kubernetes/invoker/pom.xml
+++ b/integration-tests/kubernetes/invoker/pom.xml
@@ -109,5 +109,15 @@
                 <maven.test.skip>true</maven.test.skip>
             </properties>
         </profile>
+        <profile>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <properties>
+                <skipTests>true</skipTests>
+            </properties>
+        </profile>
     </profiles>
 </project>
