--- a/independent-projects/tools/common/pom.xml
+++ b/independent-projects/tools/common/pom.xml
@@ -33,6 +33,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-devtools-utilities</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-platform-descriptor-api</artifactId>
         </dependency>
         <dependency>
