--- a/test-framework/junit5-internal/pom.xml
+++ b/test-framework/junit5-internal/pom.xml
@@ -56,6 +56,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-development-mode</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-devtools-utilities</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
