--- a/integration-tests/kubernetes/pom.xml
+++ b/integration-tests/kubernetes/pom.xml
@@ -3,81 +3,18 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <groupId>io.quarkus</groupId>
     <artifactId>quarkus-integration-tests-parent</artifactId>
+    <groupId>io.quarkus</groupId>
     <version>999-SNAPSHOT</version>
+    <relativePath>../</relativePath>
   </parent>
-  <artifactId>quarkus-integration-test-kubernetes</artifactId>
-  <name>Quarkus - Integration Tests - Kubernetes extension</name>
-  <dependencies>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-test-maven</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-kubernetes</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.dekorate</groupId>
-      <artifactId>kubernetes-annotations</artifactId>
-      <classifier>noapt</classifier>
-    </dependency>
-    <dependency>
-      <groupId>io.dekorate</groupId>
-      <artifactId>openshift-annotations</artifactId>
-      <classifier>noapt</classifier>
-    </dependency>
-    <dependency>
-      <groupId>io.dekorate</groupId>
-      <artifactId>knative-annotations</artifactId>
-      <classifier>noapt</classifier>
-    </dependency>
-  </dependencies>
-  <build>
-    <testResources>
-      <testResource>
-        <directory>src/it</directory>
-        <filtering>true</filtering>
-      </testResource>
-    </testResources>
-    <plugins>
-      <plugin>
-        <artifactId>maven-invoker-plugin</artifactId>
-        <version>3.1.0</version>
-        <executions>
-          <execution>
-            <id>integration-tests</id>
-            <goals>
-              <goal>install</goal>
-              <goal>run</goal>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-          <cloneClean>true</cloneClean>
-          <postBuildHookScript>verify</postBuildHookScript>
-          <addTestClassPath>true</addTestClassPath>
-          <skipInvocation>${skipTests}</skipInvocation>
-          <streamLogs>true</streamLogs>
-          <invokerPropertiesFile>invoker.properties</invokerPropertiesFile>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>integration-test</goal>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
+
+  <artifactId>quarkus-integration-test-kubernetes-parent</artifactId>
+  <name>Quarkus - Integration Tests - Kubernetes - Parent</name>
+  <packaging>pom</packaging>
+
+  <modules>
+    <module>invoker</module>
+    <module>standard</module>
+  </modules>
 </project>
