--- a/devtools/gradle/build.gradle
+++ b/devtools/gradle/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation "io.quarkus:quarkus-platform-descriptor-resolver-json:${version}"
     implementation "io.quarkus:quarkus-development-mode:${version}"
 
+    testImplementation 'org.mockito:mockito-core:3.2.4'
     testImplementation 'org.assertj:assertj-core:3.14.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.5.2'
