--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -129,8 +129,7 @@
         <mutiny.version>0.3.1</mutiny.version>
         <axle-client.version>0.0.12</axle-client.version>
         <mutiny-client.version>0.0.12</mutiny-client.version>
-        <kafka-clients.version>2.3.1</kafka-clients.version>
-        <kafka2.version>2.3.1</kafka2.version>
+        <kafka2.version>2.4.0</kafka2.version>
         <debezium.version>1.0.0.Final</debezium.version>
         <zookeeper.version>3.4.14</zookeeper.version>
         <!-- Scala is used by Kafka so we need to choose a compatible version -->
@@ -1428,12 +1427,12 @@
             <dependency>
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-clients</artifactId>
-                <version>${kafka-clients.version}</version>
+                <version>${kafka2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka-streams</artifactId>
-                <version>${kafka-clients.version}</version>
+                <version>${kafka2.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.kafka</groupId>
