--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -493,6 +493,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-container-image-s2i-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-kubernetes-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
