--- a/core/test-extension/deployment/src/main/resources/application.properties
+++ b/core/test-extension/deployment/src/main/resources/application.properties
@@ -118,3 +118,6 @@ quarkus.test-property=foo
 quarkus.rt.map-map.outer-key.inner-key=1234
 quarkus.btrt.map-map.outer-key.inner-key=1234
 quarkus.bt.map-map.outer-key.inner-key=1234
+
+# Test config root with "RuntimeConfig" suffix
+quarkus.foo.bar=huhu
