--- a/integration-tests/kubernetes/standard/pom.xml
+++ b/integration-tests/kubernetes/standard/pom.xml
@@ -79,6 +79,11 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.awaitility</groupId>
+            <artifactId>awaitility</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
