Add guide for Spring Cloud Config Client extension

--- a/extensions/spring-cloud-config-client/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/spring-cloud-config-client/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -6,6 +6,7 @@ metadata:
   - "spring"
   - "config"
   - "configuration"
+  guide: "https://quarkus.io/guides/spring-cloud-config-client"
   categories:
   - "compatibility"
   status: "preview"
