--- a/.github/workflows/autolabel.yml
+++ b/.github/workflows/autolabel.yml
@@ -10,6 +10,7 @@ jobs:
       - name: Debug Action
         uses: hmarr/debug-action@v1.0.0
       - name: issuelabeler
+        continue-on-error: true
         uses: docker://maxandersen/jbang-issuelabeler
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_API_TOKEN }}
