--- a/integration-tests/spring-cloud-config-client/src/main/resources/application.properties
+++ b/integration-tests/spring-cloud-config-client/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 quarkus.application.name=a-bootiful-client
-%prod.quarkus.scccc.uri=http://localhost:8089
-%prod.quarkus.scccc.username=user
-%prod.quarkus.scccc.password=pass
-%prod.quarkus.scccc.enabled=true
+%prod.quarkus.spring-cloud-config.url=http://localhost:8089
+%prod.quarkus.spring-cloud-config.username=user
+%prod.quarkus.spring-cloud-config.password=pass
+%prod.quarkus.spring-cloud-config.enabled=true
 
 greeting.message=hello from application.properties
