Add support for Mutiny in the context propagation extension
* Add the dependency on mutiny-context-propagation
* Extract the version of the smallrye-reactive-converter-rxjava2 used in context propagation tests
* Implement tests verifying the context propagation when using resteasy, transactions, servlets and when the returned Unis are created from direct values or from completion stages

--- a/extensions/smallrye-context-propagation/deployment/pom.xml
+++ b/extensions/smallrye-context-propagation/deployment/pom.xml
@@ -56,7 +56,12 @@
         <dependency>
             <groupId>io.smallrye.reactive</groupId>
             <artifactId>smallrye-reactive-converter-rxjava2</artifactId>
-            <version>1.0.4</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- For Mutiny tests -->
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-mutiny-deployment</artifactId>
             <scope>test</scope>
         </dependency>
         <!-- For DB -->
