--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -2506,6 +2506,11 @@
                 <artifactId>smallrye-reactive-converter-api</artifactId>
                 <version>${smallrye-converter-api.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.smallrye.reactive</groupId>
+                <artifactId>smallrye-reactive-converter-rxjava2</artifactId>
+                <version>${smallrye-converter-api.version}</version>
+            </dependency>
 
             <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
