Add integration tests verifying the context propagation with Mutiny

--- a/integration-tests/main/pom.xml
+++ b/integration-tests/main/pom.xml
@@ -105,6 +105,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-rest-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-resteasy-mutiny</artifactId>
+        </dependency>
 
         <!-- JPA -->
         <dependency>
