Don't fail fast on the JDK matrix build in forked repositories

--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -58,6 +58,7 @@ jobs:
     needs: build-jdk8
     timeout-minutes: 120
     strategy:
+      fail-fast: ${{ github.repository == 'quarkusio/quarkus' }}
       matrix:
         java-version: [8, 11, 12]
 
